OK, now its working had to change imports on the index.css and styles.css and import styles in index.tsx

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 .btn {
     @apply w-full py-3 px-6 text-white rounded-full text-lg transition;
